--- a/app/src/main/res/layout/card_service.xml
+++ b/app/src/main/res/layout/card_service.xml
@@ -3,63 +3,131 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
+    android:layout_height="250dp"
     android:layout_margin="@dimen/margin_small">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/container_holder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
+
 
         <TextView
             android:id="@+id/name_owner_label"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_large"
             android:layout_marginRight="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_small"/>
+            android:layout_marginTop="90dp"
+            android:textColor="@android:color/white"/>
 
         <TextView
             android:id="@+id/name_car_label"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_large"
+            android:layout_marginLeft="150dp"
             android:layout_marginRight="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_small"/>
+            android:layout_marginTop="120dp"
+            />
 
         <TextView
             android:id="@+id/milege_car_text"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_large"
+            android:layout_marginLeft="150dp"
             android:layout_marginRight="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_small"/>
+            android:layout_marginTop="135dp"
+            />
 
         <TextView
             android:id="@+id/year_car_text"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_large"
+            android:layout_marginLeft="150dp"
             android:layout_marginRight="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_small"/>
+            android:layout_marginTop="150dp"
+            />
 
         <TextView
             android:id="@+id/service_car_text"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_large"
+            android:layout_marginLeft="150dp"
             android:layout_marginRight="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_small"/>
+            android:layout_marginTop="165dp"
+            />
 
         <TextView
             android:id="@+id/total_price_text"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_large"
+            android:layout_marginLeft="150dp"
             android:layout_marginRight="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_small"/>
+            android:layout_marginTop="180dp"
+            />
 
-    </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/car_label"
+            android:id="@+id/car_txt"
+            android:layout_alignTop="@+id/name_car_label"
+            android:layout_alignLeft="@+id/name_owner_label"
+            android:layout_alignStart="@+id/name_owner_label"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/mileage_label"
+            android:id="@+id/mileage_txt"
+            android:layout_alignBottom="@+id/milege_car_text"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="15dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/year_label"
+            android:id="@+id/year_txt"
+            android:layout_alignBottom="@+id/year_car_text"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="15dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/service_label"
+            android:id="@+id/service_txt"
+            android:layout_alignBottom="@+id/service_car_text"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="15dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/price_label"
+            android:id="@+id/price_txt"
+            android:layout_alignBottom="@+id/total_price_text"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="15dp"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/share_button"
+            android:id="@+id/share_button"
+            style="@style/ButtonCard"
+            android:layout_below="@+id/total_price_text"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"/>
+
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
